Fixed `footer` links alignment

--- a/components/form/styles.css
+++ b/components/form/styles.css
@@ -37,9 +37,8 @@ form {
 
     & .links {
       display: flex;
-      flex-direction: column-reverse;
       align-items: center;
-      gap: calc(var(--half-spacing) / 2);
+      justify-content: space-between;
 
       &.centered {
         justify-content: center;
